# AOC

./: 1.rb  aoc.rb
2016/: 1.rb
2017/: 1.rb  10a.rb  10b.rb  11a.rb  11b.rb  12a.rb  12b.rb  13a.rb  13b.rb  13c.rb  14a.rb  14b.rb  15a.rb  15b.rb  16a.rb  16b.rb  17a.rb  17b.rb  18a.rb  18b.rb  19a.rb  19b.rb  20a.rb  20b.rb  21a.rb  21b.rb  22a.rb  22b.rb  23a.rb  23b.rb  24a.rb  24b.rb  25a.rb  2a.rb  2b.rb  3a.rb  3b.rb  4a.rb  4b.rb  5a.rb  (+9 more)
2018/: 01a.rb  01b.rb  02a.rb  02b.rb  03a.rb  03b.rb  04a.rb  04b.rb  05a.rb  05b.rb  06a.rb  06b.rb  07a.rb  07b.rb  08a.rb  08b.rb  09a.rb  09b.rb  09b.slow.rb  10a.rb  10b.rb  11a.rb  11b.rb  12a.rb  12b.rb  13a.rb  13b.rb  14a.rb  14b.rb  15a.rb  16a.rb  16b.rb  17a.rb  17b.rb  18a.rb  18b.rb  19a.rb  19b.rb  20a.rb  21a.rb  (+2 more)
2020/: Cargo.toml
2020/src/: lib.rs  main.rs
